// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC eGqrHA"
      disabled={true}
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <div
        className="sc-bndzKH bnCjcG"
      >
        <input
          className="sc-ehmXTo fcJBXQ"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC eGqrHA"
      disabled={true}
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <div
        className="sc-bndzKH bnCjcG"
      >
        <input
          className="sc-ehmXTo bbgnoj"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC eGqrHA"
      disabled={true}
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo hmkZqJ"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <div
        className="sc-bndzKH bnCjcG"
      >
        <input
          className="sc-ehmXTo jXVFHq"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-hoIcGJ emgWzV"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <div
        className="sc-bndzKH bnCjcG"
      >
        <input
          className="sc-ehmXTo kIfNgJ"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-hoIcGJ emgWzV"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo fBNICz"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-hoIcGJ emgWzV"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <div
        className="sc-bndzKH bnCjcG"
      >
        <input
          className="sc-ehmXTo fcJBXQ"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <div
        className="sc-bndzKH bnCjcG"
      >
        <input
          className="sc-ehmXTo bbgnoj"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo hmkZqJ"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <div
        className="sc-bndzKH bnCjcG"
      >
        <input
          className="sc-ehmXTo fcJBXQ"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <div
        className="sc-bndzKH bnCjcG"
      >
        <input
          className="sc-ehmXTo bbgnoj"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo hmkZqJ"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <div
        className="sc-bndzKH bnCjcG"
      >
        <input
          className="sc-ehmXTo fcJBXQ"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <div
        className="sc-bndzKH bnCjcG"
      >
        <input
          className="sc-ehmXTo bbgnoj"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo hmkZqJ"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
        dir="rtl"
      >
        medium
      </label>
      <div
        className="sc-bndzKH bnCjcG"
      >
        <input
          className="sc-ehmXTo fcJBXQ"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hMtawp laTXED"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
        dir="rtl"
      >
        large
      </label>
      <div
        className="sc-bndzKH bnCjcG"
      >
        <input
          className="sc-ehmXTo bbgnoj"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hMtawp laTXED"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo hmkZqJ"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-jveewi cuNMtv"
        >
          xlarge
        </label>
        <div
          className="sc-hMtawp laTXED"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH bnCjcG"
      >
        <input
          className="sc-ehmXTo fcJBXQ"
          placeholder="medium"
          type="password"
        />
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH bnCjcG"
      >
        <input
          className="sc-ehmXTo bbgnoj"
          placeholder="large"
          type="password"
        />
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo BsodU"
          placeholder="xlarge"
          type="password"
        />
        <label
          className="sc-jveewi jlDwJo"
        />
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <div
        className="sc-bndzKH bnCjcG"
      >
        <input
          className="sc-ehmXTo lkmIwf"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <div
        className="sc-bndzKH bnCjcG"
      >
        <input
          className="sc-ehmXTo cHjWUk"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH fUIiCE"
      >
        <input
          className="sc-ehmXTo hmkZqJ"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
        <div
          className="sc-hMtawp boHcTA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
